--- a/WPFMVVMSandbox.View/App.xaml
+++ b/WPFMVVMSandbox.View/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="WPFMVVMSandbox.View.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFMVVMSandbox.View"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="WPFMVVMSandbox.View.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:WPFMVVMSandbox.View"
+    StartupUri="MainWindow.xaml"
+    >
+    <Application.Resources />
 </Application>
